# Monte-Carlo-paper

./: .gitignore  README.md  generate_synthetic_data.py
R/: 01_mc_rank_means.R  02_bootstrap_lift_ci.R  03_block_permutation.R  04_strategy_correlations.R  05_portfolio_mc_ranks.R  README.md  _helpers.R
python/: README.md  block_perm_analysis.py  block_perm_bootstrap.py  calendar_cluster_bootstrap.py  correlation_figures.py  crypto_stratified_analysis.py  full_analysis.py  portfolio_mc_analysis.py  regenerate_all_figures.py  reviewer_analyses.py  strategy_correlations.py  synthetic_scenarios.py
results/: README.md
results/raw_data/: MANIFEST.md  bnb_portfolio_mc.csv.INFO  bnb_window_pairs.csv.INFO  btc_window_pairs.csv.INFO  doge_portfolio_mc.csv.INFO  doge_window_pairs.csv.INFO
results/tables/: all_filters_comparison.csv  block_perm_per_asset.csv  block_perm_window_cluster_ci.csv  continuous_sharpe.csv  cost_sensitivity_pf_sweep.csv  cost_sensitivity_two_levels.csv  empirical_bootstrap_ci.csv  fair_comparison.csv  filter_ranking_summary.csv  is_oos_correlation_by_filter.csv  matched_pool_placebo.csv  mc_by_family.csv  mc_correlations.csv  mc_filter_pass_fail.csv  mc_filter_vs_next_oos.csv  mc_pct_rank_summary.csv  mc_selection_bias.csv  pf_stratified_crypto.csv  portfolio_mc_summary.csv  strat_vs_portfolio_mc.csv  (+17 more)
rust/: README.md
rust/block_perm_rs/: Cargo.toml
rust/block_perm_rs/src/: main.rs
rust/corr_rs/: Cargo.toml
rust/corr_rs/src/: main.rs
rust/synthetic_pipeline_rust/: Cargo.toml
rust/synthetic_pipeline_rust/src/: main.rs
(+7 files in other folders)
