[package]
name = "synthetic_pipeline"
version = "0.1.0"
edition = "2021"
authors = ["anonymous"]
description = "Three-tier synthetic MC validation pipeline (scenarios A/B/C for paper figures 5-8)"

[dependencies]
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
csv = "1.3"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
